2016-03-19         Arnold D. Robbins     <arnold@skeeve.com>

	* profile5.ok: Adjust after code changes.

2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>

	* profile2.ok, profile5.ok: Adjust after code changes.

2016-02-05         Arnold D. Robbins     <arnold@skeeve.com>

	* badargs.ok: Update after adding Yet Another Command Line Option.

2016-01-28         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add profile9.awk and profile9.ok.

2016-01-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (aryprm9): New test.
	* aryprm9.awk, aryprm9.ok: New files.

	Unrelated:

	* ChangeLog: Remove spurious whitespace.

2015-12-27         Arnold D. Robbins     <arnold@skeeve.com>

	These came in from gawk-4.1-stable:

	* Makefile.am (profile8): New test.
	* profile8.awk, profile8.ok: New files.

	These used to be profile8:

	* Makefile.am (profile9): Renamed.
	* profile9.awk, profile9.ok: Renamed files.

2015-11-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (watchpoint1): New test.
	* watchpoint1.awk, watchpoint1.in, watchpoint1.ok,
	watchpoint1.script: New files.

2015-10-28         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (nulinsrc): New test.
	* nulinsrc.awk, nulinsrc.ok: New files.

2015-10-26         Arnold D. Robbins     <arnold@skeeve.com>

	* id.awk: Sort the output. Helps on z/OS.
	* id.ok: Adjust.

2015-10-11         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readbuf): New test.
	* readbuf.awk, readbuf.ok: New files.

2015-09-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (muldimposix): New test.
	* muldimposix.awk, muldimposix.ok: New files.

2015-09-18         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fpat5): New test.
	* fpat5.awk, fpat5.in, fpat5.ok: New files.

2015-09-04         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.ok: Updated after code change.
