@@ -1,6 +1,8 @@
 2016-03-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* profile5.ok: Adjust after code changes.
+	* Makefile.am (profile10): New test.
+	* profile10.awk, profile10.ok: New files.
 
 2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>
 
